# easy-sshca

./: .gitignore  Cargo.toml  README.md  install-client.sh
.github/workflows/: build-release.yml
scripts/: setup_server.sh
src/: client_config.rs  config.rs  config_file.rs  fail_helper.rs  lib.rs  main.rs  server_config.rs  ssh_keygen.rs  start_web_server.rs  totp.rs  web_client.rs  web_server.rs
src/res/: config.yml
