[package]
name = "easy-sshca"
version = "0.1.1"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-app = { version = "0.1.6", features = ["tls"] }
serde_yml = "0.0.12"
ssh-key = "0.6.7"
temp-dir = "0.1.14"
url = "2.5.4"
constant_time_eq = "0.4.2"
dotenv = "0.15.0"
totp-lite = "2.0.1"
base32 = "0.5.1"
reqwest = { version = "0.12", features = ["native-tls-vendored"] }
clap = { version = "4.5", features = ["derive"] }
qr2term = "0.3.3"
rand = "0.9.1"
rand_hc = "0.4.0"
chrono = "0.4"

